# helloFreeRTOS

./: .gitmodules  CMakeLists.txt  RP2040_setup.md  main.cpp
